--- a/styles/style.css
+++ b/styles/style.css
@@ -55,14 +55,13 @@
   gap: 22px;
 }
 
-.header__title {  
+.header__title {
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vi, 4.0625rem);
   font-weight: 400;
   line-height: clamp(3.0625rem, 2.7104rem + 1.5023vi, 4.0625rem);
   letter-spacing: 0em;
   text-align: left;
   color: var(--accent-color);
-
 }
 
 .header__subtitle {
@@ -72,7 +71,6 @@
   line-height: clamp(0.875rem, 0.6769rem + 0.8451vi, 1.4375rem);
   letter-spacing: 0em;
   text-align: left;
-
 }
 
 .theme-menu {
@@ -85,7 +83,6 @@
   letter-spacing: 0em;
   text-align: left;
   margin-inline-start: 17px;
-
 }
 
 .theme-menu__list {
@@ -105,17 +102,17 @@
 }
 
 .theme-menu__button::after {
-  content: ''; 
-  position: absolute; 
-  background: currentColor; 
+  content: "";
+  position: absolute;
+  background: currentColor;
   left: 0;
-  bottom: -2px; 
-  width: 100%; 
+  bottom: -2px;
+  width: 100%;
   height: 2px;
   scale: 0;
   transition: scale ease 0.3s;
   transform-origin: center left;
- }
+}
 
 .theme-menu__button:disabled::before {
   position: absolute;
@@ -137,7 +134,6 @@
 
 .theme-menu__button:focus-visible::after {
   scale: 1;
-  
 }
 
 .theme-menu__button:hover {
@@ -155,7 +151,6 @@
   min-inline-size: 375px;
   max-inline-size: 700px;
   margin-block-start: 100px;
-
 }
 
 .card {
@@ -232,11 +227,8 @@
   position: absolute;
   top: 30px;
   right: 25px;
-  text-shadow:
-    -1px 0 var(--text-stroke-color), 
-   0 1px var(--text-stroke-color), 
-   1px 0 var(--text-stroke-color), 
-   0 -1px var(--text-stroke-color);
+  text-shadow: -1px 0 var(--text-stroke-color), 0 1px var(--text-stroke-color),
+    1px 0 var(--text-stroke-color), 0 -1px var(--text-stroke-color);
   font-family: var(--accent-font), sans-serif;
   font-size: 14px;
   font-weight: 400;
@@ -247,13 +239,16 @@
   color: var(--accent-color);
 }
 
-@supports((text-stroke: 1px var(--text-stroke-color)) or (-webkit-text-stroke: 1px var(--text-stroke-color))) {
+@supports (
+  (text-stroke: 1px var(--text-stroke-color)) or
+    (-webkit-text-stroke: 1px var(--text-stroke-color))
+) {
   .card__lable {
-      -webkit-text-stroke: 1px var(--text-stroke-color);
-      text-stroke: 1px var(--text-stroke-color);
-      text-shadow: none;
+    -webkit-text-stroke: 1px var(--text-stroke-color);
+    text-stroke: 1px var(--text-stroke-color);
+    text-shadow: none;
   }
-} 
+}
 
 .card__text {
   font-size: 18px;
@@ -262,7 +257,6 @@
   text-align: left;
   padding-block-end: 27px;
   padding-inline: var(--space);
-
 }
 
 .card__text:last-of-type {
@@ -314,15 +308,10 @@
   height: 38px;
 }
 
-
 .button__text {
   position: relative;
   color: var(--text-animation-color);
   mix-blend-mode: difference;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
 }
 
 .footer {
@@ -334,11 +323,14 @@
   background-color: var(--main-color);
   width: clamp(19.125rem, 18.4868rem + 2.723vi, 20.9375rem);
   min-height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
 }
 
 .floppy {
   height: 21px;
-  
 }
 
 .like-icon {
@@ -363,7 +355,6 @@
   gap: 30px;
   padding-block: 30px;
   padding-inline: 30px;
-  
 }
 
 .dialog::backdrop {
@@ -373,17 +364,15 @@
 
 .dialog__content {
   display: flex;
-  
+
   line-height: 21px;
   align-items: center;
   justify-content: start;
-  
 }
 
 .dialog__floppy {
   height: 39px;
   width: 39px;
-  
 }
 
 .dialog__title {
@@ -391,14 +380,12 @@
   padding-inline-start: 20px;
 }
 
-
 .dialog__button {
   border: solid 2px var(--accent-color);
   text-align: center;
   height: 38px;
   width: 100%;
   text-transform: uppercase;
-  
 }
 
 .dialog__button:focus {
@@ -423,7 +410,7 @@
 
 .button__animation::before {
   position: absolute;
-  left:  0;
+  left: 0;
   bottom: 0;
   width: 100%;
   height: 100%;
@@ -456,32 +443,32 @@
   transition: fill 0.1s linear;
 }
 
-.card__icon-button:hover .main-body{
+.card__icon-button:hover .main-body {
   fill: var(--accent-color);
   transition-delay: 0.05s;
 }
 
-.card__icon-button:hover .core{
+.card__icon-button:hover .core {
   fill: var(--accent-color);
   transition-delay: 0s;
 }
 
-.card__icon-button:active .main-body{
+.card__icon-button:active .main-body {
   fill: var(--heart-main-body);
   transition-delay: 0.05s;
 }
 
-.card__icon-button:active .core{
+.card__icon-button:active .core {
   fill: var(--heart-main-body);
   transition-delay: 0s;
 }
 
-.like-icon.is-liked .main-body{
+.like-icon.is-liked .main-body {
   fill: var(--heart-main-body);
   transition-delay: 0.05s;
 }
 
-.like-icon.is-liked .core{
+.like-icon.is-liked .core {
   fill: var(--heart-main-body);
   transition-delay: 0s;
 }
@@ -498,7 +485,7 @@
   to {
     scale: 1.5;
   }
-} 
+}
 
 .like-icon.is-liked .heart {
   animation: sizes 0.3s 0.1s ease-in alternate;
@@ -512,7 +499,7 @@
   to {
     opacity: 1;
   }
-} 
+}
 
 .like-icon.is-liked .sparks {
   animation: sparks 0.3s 0.3s ease-in alternate;
@@ -522,7 +509,6 @@
   .header {
     justify-content: start;
     padding-block-start: 120px;
-    
   }
   .theme-menu {
     padding-block-start: 20px;
@@ -549,21 +535,16 @@
     top: 25px;
     right: 10px;
   }
+
   .footer__button {
     padding-block: 15px;
-  }
-
-  .text__footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 10px;
-
   }
-
 
   .floppy {
     height: 28px;
   }
-  
 }
