--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,46 +5,72 @@
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
 :root.theme-dark {
-    --main-color: #000000;
-    --accent-color: #00CC14;
-    --text-stroke-color:  hwb(0 0% 100% / 0.5);
-    --text-animation-color: var(--accent-color);
-    --title-font-weight: 785;
-    --text-font-weight: 465;
-    --gradient: 
-        repeating-linear-gradient(90deg, #000000, #000000 2px, transparent 2px, transparent 4px),
-        repeating-linear-gradient(#000000, #000000 2px, transparent 2px, transparent 4px),
-        linear-gradient(#007f0c, #004306);
-  }
-
+  --main-color: #000000;
+  --accent-color: #00cc14;
+  --text-stroke-color: hwb(0 0% 100% / 0.5);
+  --text-animation-color: var(--accent-color);
+  --title-font-weight: 785;
+  --text-font-weight: 465;
+  --gradient: repeating-linear-gradient(
+      90deg,
+      #000000,
+      #000000 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(
+      #000000,
+      #000000 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    linear-gradient(#007f0c, #004306);
+}
 
 :root.theme-light {
-    --main-color: #FFFFFF;
+  --main-color: #ffffff;
+  --accent-color: #000000;
+  --text-stroke-color: hwb(0 100% 0% / 0.5);
+  --text-animation-color: var(--main-color);
+  --title-font-weight: 700;
+  --text-font-weight: 400;
+  --gradient: repeating-linear-gradient(
+      90deg,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    linear-gradient(#e7e7e7 0.01%, #1a1a1a 100%);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --main-color: #ffffff;
     --accent-color: #000000;
-    --text-stroke-color:  hwb(0 100% 0% / 0.5);
+    --text-stroke-color: hwb(0 100% 0% / 0.5);
     --text-animation-color: var(--main-color);
     --title-font-weight: 700;
     --text-font-weight: 400;
-    --gradient: 
-        repeating-linear-gradient(90deg, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
-        repeating-linear-gradient(#d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
-        linear-gradient(#e7e7e7 0.01%, #1a1a1a 100%);
+    --gradient: repeating-linear-gradient(
+        90deg,
+        #d3d3d3,
+        #d3d3d3 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      repeating-linear-gradient(
+        #d3d3d3,
+        #d3d3d3 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      linear-gradient(#e7e7e7 0.01%, #1a1a1a 100%);
+  }
 }
-  
-@media (prefers-color-scheme: light) {
-    :root {
-        --main-color: #FFFFFF;
-        --accent-color: #000000;
-        --text-stroke-color:  hwb(0 100% 0% / 0.5);
-        --text-animation-color: var(--main-color);
-        --title-font-weight: 700;
-        --text-font-weight: 400;
-        --gradient: 
-            repeating-linear-gradient(90deg, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
-            repeating-linear-gradient(#d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
-            linear-gradient(#e7e7e7 0.01%, #1a1a1a 100%);
-    }
-}
-
-
-
