--- a/styles/themes.css
+++ b/styles/themes.css
@@ -7,7 +7,8 @@
 :root.theme-dark {
   --main-color: #000000;
   --accent-color: #00cc14;
-  --text-stroke-color: hwb(0 0% 100% / 0.5);
+  --lable-color: var(--accent-color);
+  --text-stroke-color: var(--main-color);
   --text-animation-color: var(--accent-color);
   --title-font-weight: 785;
   --text-font-weight: 465;
@@ -30,7 +31,8 @@
 :root.theme-light {
   --main-color: #ffffff;
   --accent-color: #000000;
-  --text-stroke-color: hwb(0 100% 0% / 0.5);
+  --lable-color: var(--main-color);
+  --text-stroke-color: var(--accent-color);
   --text-animation-color: var(--main-color);
   --title-font-weight: 700;
   --text-font-weight: 400;
@@ -54,7 +56,8 @@
   :root {
     --main-color: #ffffff;
     --accent-color: #000000;
-    --text-stroke-color: hwb(0 100% 0% / 0.5);
+    --lable-color: var(--main-color);
+    --text-stroke-color: var(--accent-color);
     --text-animation-color: var(--main-color);
     --title-font-weight: 700;
     --text-font-weight: 400;
