--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,7 +3,8 @@
 :root {
   --main-color: #000000;
   --accent-color: #00cc14;
-  --text-stroke-color: hwb(0 0% 100% / 0.5);
+  --text-stroke-color: var(--main-color);
+  --lable-color: var(--accent-color);
   --text-animation-color: var(--accent-color);
   --space: 25px;
   --main-font: "Inter-Variable";
