--- a/styles/themes.css
+++ b/styles/themes.css
@@ -31,8 +31,8 @@
 :root.theme-light {
   --main-color: #ffffff;
   --accent-color: #000000;
-  --lable-color: var(--main-color);
-  --text-stroke-color: var(--accent-color);
+  --lable-color: var(--accent-color);
+  --text-stroke-color: var(--main-color);
   --text-animation-color: var(--main-color);
   --title-font-weight: 700;
   --text-font-weight: 400;
@@ -56,8 +56,8 @@
   :root {
     --main-color: #ffffff;
     --accent-color: #000000;
-    --lable-color: var(--main-color);
-    --text-stroke-color: var(--accent-color);
+    --lable-color: var(--accent-color);
+    --text-stroke-color: var(--main-color);
     --text-animation-color: var(--main-color);
     --title-font-weight: 700;
     --text-font-weight: 400;
